feat: add working_directory support for projects not at repository root

--- a/action.yml
+++ b/action.yml
@@ -14,17 +14,25 @@ inputs:
     default: "default"
     required: false
   coverage_threshold:
-    description: “Coverage threshold”
+    description: "Coverage threshold"
     default: 90
+    required: false
+  working_directory:
+    description: "Working directory"
+    default: "."
     required: false
 
 runs:
   using: "composite"
   steps:
+
     - name: Tests and coverage
       id: tests
       shell: bash
-      run: if mix test --cover 2>&1 | tee coverage_report.log; then echo 'success running the tests'; fi
+      run: |
+        cd ${{ inputs.working_directory }}
+        if mix test --cover 2>&1 | tee coverage_report.log; then echo 'success running the tests'; fi
+
     - name: Feedback comment
       uses: actions/github-script@v6.1.0
       with:
@@ -42,4 +50,5 @@ runs:
             context,
             coverageTool,
             coverageThreshold: ${{ inputs.coverage_threshold }},
+            workingDirectory: '${{ inputs.working_directory }}',
           });
