--- a/.github/workflows/example_app.yml
+++ b/.github/workflows/example_app.yml
@@ -8,8 +8,11 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     name: Tests & Checks
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     defaults:
       run:
         working-directory: ./tests/example_app
