--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,13 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Cache coverage
+      uses: actions/cache@v4
+      with:
+        path: .coverage-cache
+        key: ${{ runner.os }}-coverage-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-coverage-
 
     - name: Tests and coverage
       id: tests
