--- a/.github/workflows/example_app.yml
+++ b/.github/workflows/example_app.yml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      issues: write
     defaults:
       run:
         working-directory: ./tests/example_app
